Added lots of error checking in AdjustClientXYForNestedDocuments so that things will fail gracefully while the content area is in the early stages of development (no view manager, etc). Probably fixes bug #31563.